--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -2,44 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #0a0a0a;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   color: white;
 }
 
 @layer components {
+  header:not(.nav), section {
+    @apply p-6 lg:py-20
+  }
+  
+  main.has-padding {
+    @apply w-full max-w-[100rem] flex flex-col text-center mt-12 lg:mt-20;
+  }
+
+  section.centered {
+    @apply flex flex-col items-center md:text-center mb-12 lg:mb-20;
+  }
+
   p {
-    @apply max-w-3xl;
+    @apply max-w-3xl text-neutral-200 leading-relaxed;
   }
 
   .large-title {
-    @apply text-6xl font-semibold bg-gradient-to-r from-white to-neutral-400 inline-block text-transparent bg-clip-text pb-6 tracking-tight;
+    @apply text-4xl xl:text-5xl font-semibold bg-gradient-to-b from-white to-neutral-400 inline-block text-transparent bg-clip-text pb-6 tracking-tighter;
   }
 
   .title-1 {
-
+    @apply text-4xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
   }
 
   .title-2 {
-
+    @apply text-3xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-3 {
-
+    @apply text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .headline {
-    @apply text-sm font-medium text-white/60;
+    @apply text-sm font-medium text-neutral-400;
   }
 
   .lead {
-    @apply text-2xl lg:text-3xl;
+    @apply leading-relaxed text-lg;
   }
 
   .lead-2 {
-    @apply text-base leading-loose;
+    @apply text-base;
   }
 
   .body-text {
