--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -17,15 +17,11 @@ body {
 @layer components {
   header:not(.nav),
   section {
-    @apply p-6 lg:p-20 lg:py-12;
+    @apply p-6 lg:px-20 lg:py-10;
   }
 
   main.has-padding {
-    @apply w-full max-w-[85rem] flex flex-col text-center mt-12;
-  }
-
-  section.centered {
-    @apply flex flex-col items-center md:text-center mb-12 lg:mb-20;
+    @apply w-full max-w-[80rem] flex flex-col text-center mt-20;
   }
 
   p {
@@ -33,19 +29,19 @@ body {
   }
 
   .large-title {
-    @apply text-4xl xl:text-5xl font-semibold bg-gradient-to-b from-white to-neutral-400 inline-block text-transparent bg-clip-text pb-6 tracking-tighter;
+    @apply text-3xl xl:text-5xl font-semibold bg-gradient-to-b from-white to-neutral-400 inline-block text-transparent bg-clip-text md:pb-4 lg:pb-6 tracking-tighter;
   }
 
   .title-1 {
-    @apply text-4xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
+    @apply text-3xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
   }
 
   .title-2 {
-    @apply text-3xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-3 {
-    @apply text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .headline {
