Wrote styling for the awards page

--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -33,15 +33,19 @@ body {
   }
 
   .title-1 {
-    @apply text-3xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
+    @apply text-2xl xl:text-3xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-2 {
-    @apply text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-lg xl:text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-1.5 lg:pb-3 tracking-tighter;
   }
 
   .title-3 {
-    @apply text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-base xl:text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-1.5 lg:pb-3 tracking-tighter;
+  }
+
+  .title-4 {
+    @apply text-sm xl:text-lg font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-1 lg:pb-2 tracking-tighter;
   }
 
   .headline {
