--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -16,7 +20,7 @@ body {
 
 @layer components {
   main {
-    @apply w-full flex flex-col gap-12 lg:gap-20 text-center mt-[25%] lg:mt-40 px-6 lg:px-20 max-w-[80rem];
+    @apply w-full flex flex-col gap-16 lg:gap-32 px-6 lg:px-20 max-w-[80rem] text-center;
   }
 
   main.project {
@@ -28,23 +32,23 @@ body {
   }
 
   .large-title {
-    @apply text-3xl xl:text-5xl font-semibold bg-gradient-to-b from-white to-neutral-400 inline-block text-transparent bg-clip-text md:pb-4 lg:pb-6 tracking-tighter;
+    @apply text-4xl md:text-5xl xl:text-6xl font-semibold bg-gradient-to-b from-white to-neutral-400 inline-block text-transparent bg-clip-text pb-2 md:pb-4 lg:pb-6 tracking-tighter;
   }
 
   .title-1 {
-    @apply text-3xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
+    @apply text-3xl xl:text-4xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
   }
 
   .title-2 {
-    @apply text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-2xl xl:text-3xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-3 {
-    @apply text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-xl xl:text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-4 {
-    @apply text-lg font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-2 tracking-tighter;
+    @apply text-lg xl:text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-2 tracking-tighter;
   }
 
   .headline {
