--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -23,16 +23,24 @@ body {
     @apply underline decoration-neutral-400 underline-offset-1 decoration-dotted;
   }
 
-  main {
-    @apply w-full flex flex-col gap-16 mt-40 lg:gap-32 px-6 lg:px-20 max-w-[80rem] min-h-[calc(100vh-10rem)];
+  main:not(.project) {
+    @apply w-full flex flex-col gap-16 mt-[13rem] lg:gap-32 px-6 lg:px-20 max-w-[80rem] min-h-[calc(100vh-10rem)];
   }
 
   main.project {
-    @apply gap-12 lg:gap-16;
+    @apply gap-12 lg:gap-16 max-w-full flex items-center flex-col mt-[13rem];
+  }
+
+  main.project section {
+    @apply w-full max-w-[80rem] lg:px-20;
+  }
+
+  li {
+    @apply text-neutral-300;
   }
 
   p {
-    @apply max-w-3xl text-neutral-200 leading-relaxed pb-4;
+    @apply max-w-3xl text-neutral-300 leading-relaxed pb-4;
   }
 
   .large-title {
@@ -40,23 +48,27 @@ body {
   }
 
   .title-1 {
-    @apply text-3xl xl:text-4xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
+    @apply text-3xl xl:text-4xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-300 inline-block text-transparent bg-clip-text pb-4 tracking-tighter;
+  }
+
+  .title-1-no-gradient {
+    @apply text-3xl xl:text-4xl font-medium tracking-tight;
   }
 
   .title-2 {
-    @apply text-2xl xl:text-3xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-2xl xl:text-3xl font-semibold bg-gradient-to-b from-neutral-200 to-neutral-300 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-3 {
-    @apply text-xl xl:text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
+    @apply text-xl xl:text-2xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-300 inline-block text-transparent bg-clip-text pb-3 tracking-tighter;
   }
 
   .title-4 {
-    @apply text-lg xl:text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-2 tracking-tighter;
+    @apply text-lg xl:text-xl font-bold bg-gradient-to-b from-neutral-200 to-neutral-300 inline-block text-transparent bg-clip-text pb-2 tracking-tighter;
   }
 
   .title-5 {
-    @apply text-base xl:text-lg font-bold bg-gradient-to-b from-neutral-200 to-neutral-400 inline-block text-transparent bg-clip-text pb-2 tracking-tighter;
+    @apply text-base xl:text-lg font-bold bg-gradient-to-b from-neutral-200 to-neutral-300 inline-block text-transparent bg-clip-text pb-2 tracking-tighter;
   }
 
   .headline {
