--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -24,11 +24,11 @@ body {
   }
 
   main:not(.project) {
-    @apply w-full flex flex-col gap-16 mt-[10rem] lg:gap-32 px-6 lg:px-20 max-w-[80rem] min-h-[calc(100vh-10rem)];
+    @apply w-full flex flex-col gap-16 mt-[13rem] lg:gap-32 px-6 lg:px-20 max-w-[80rem] min-h-[calc(100vh-10rem)];
   }
 
   main.project {
-    @apply gap-12 lg:gap-16 max-w-full flex items-center flex-col mt-[10rem];
+    @apply px-6 gap-16 lg:gap-24 max-w-full flex items-center flex-col mt-[13rem];
   }
 
   main.project section {
