--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -24,7 +24,7 @@ body {
   }
 
   main:not(.project) {
-    @apply w-full flex flex-col gap-16 mt-[13rem] lg:gap-32 px-6 lg:px-20 max-w-[80rem] min-h-[calc(100vh-10rem)];
+    @apply w-full flex flex-col gap-16 mt-[13rem] lg:gap-32 px-6 lg:px-20 max-w-[80rem];
   }
 
   main.project {
@@ -87,7 +87,7 @@ body {
   }
 
   .icon-link {
-    @apply text-neutral-400 hover:text-neutral-50 focus:text-neutral-50 transition-colors;
+    @apply text-neutral-200 hover:text-blue-400 focus:text-blue-400 focus:scale-125 transition-colors;
   }
 
   .chip {
@@ -95,7 +95,7 @@ body {
   }
 
   nav a.link {
-    @apply text-sm font-medium text-neutral-300 hover:text-teal-300 focus:text-teal-300 transition-colors;
+    @apply text-sm font-medium text-neutral-200 hover:text-blue-400 focus:text-blue-400 focus:scale-1025 transition-colors;
   }
 
   .document-link {
